style: remove default browser gap stopping element from expanding the full vw

--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,10 @@
   color: #222222;
   box-sizing: border-box;
 }
+
+html,
+body {
+  margin: 0px;
+  padding: 0px;
+  width: 100%;
+}
