--- a/src/styleModules/layout.module.css
+++ b/src/styleModules/layout.module.css
@@ -1,10 +1,13 @@
 .header {
   display: flex;
+  background-color: lightgray;
+  padding: 0px 60px;
+  box-shadow: 0px 4px 8px #222222;
 }
 
 .pageContainer {
   display: grid;
-  padding: 0px 60px;
+  padding: 30px 60px;
 }
 
 .storeName {
